# LaunchTrac

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.cloud  Dockerfile.edge  NOTICE.md  README.md  defaults.toml  docker-compose.yml  fly.toml  justfile
.github/workflows/: ci.yml
crates/launchtrac-api/: Cargo.toml
crates/launchtrac-api/src/: lib.rs
crates/launchtrac-auth/: Cargo.toml
crates/launchtrac-auth/src/: lib.rs
crates/launchtrac-common/: Cargo.toml
crates/launchtrac-common/src/: config.rs  error.rs  lib.rs  shot.rs  types.rs
crates/launchtrac-companion/: Cargo.toml
crates/launchtrac-companion/src/: lib.rs
crates/launchtrac-edge/: Cargo.toml
crates/launchtrac-edge/examples/: generate_fixtures.rs  process_fixture.rs
crates/launchtrac-edge/src/: main.rs
crates/launchtrac-edge/src/actors/: camera1.rs  cloud_uploader.rs  image_processor.rs  mod.rs  motion_detector.rs  results_router.rs  strobe_controller.rs
crates/launchtrac-edge/src/web/: mod.rs
crates/launchtrac-hal/: Cargo.toml
crates/launchtrac-hal/src/: camera.rs  gpio.rs  lib.rs  mock.rs  pwm.rs
crates/launchtrac-ota/: Cargo.toml
crates/launchtrac-ota/src/: lib.rs
crates/launchtrac-relay/: Cargo.toml
crates/launchtrac-relay/src/: lib.rs
crates/launchtrac-shot/: Cargo.toml
crates/launchtrac-shot/src/: lib.rs
crates/launchtrac-sim-proto/: Cargo.toml
crates/launchtrac-sim-proto/src/: e6.rs  gspro.rs  lib.rs
crates/launchtrac-vision/: Cargo.toml
crates/launchtrac-vision/src/: ball_detector.rs  calibration.rs  lib.rs  spin_estimator.rs  trajectory.rs
crates/launchtrac-vision/tests/: integration_test.rs
dashboard/: package-lock.json  package.json
dashboard/src/: app.css
dashboard/src/lib/: types.ts
dashboard/src/lib/components/: DispersionPlot.svelte  ShotCard.svelte  StatusBar.svelte
dashboard/src/lib/range/: index.ts  midnight.ts  types.ts  vapor.ts
dashboard/src/lib/stores/: shots.ts
dashboard/src/routes/: +layout.svelte  +page.svelte
dashboard/src/routes/analytics/: +page.svelte
dashboard/src/routes/history/: +page.svelte
dashboard/src/routes/range/: +page.svelte
dashboard/src/routes/setup/: +page.svelte
docs/architecture/: 001-rust-rewrite.md  002-eliminate-custom-pcb.md  003-actor-pipeline.md
docs/architecture/presentation/: index.html
hardware/bom/: README.md
sql/: init.sql
tests/fixtures/driver_shot_001/: metadata.json
tests/fixtures/iron7_shot_001/: metadata.json
tests/fixtures/mishit_top_001/: metadata.json
tests/fixtures/putter_shot_001/: metadata.json
tests/fixtures/sky_ball_001/: metadata.json
tests/fixtures/wedge_shot_001/: metadata.json
