[workspace]
resolver = "2"
members = [
    "crates/launchtrac-common",
    "crates/launchtrac-hal",
    "crates/launchtrac-vision",
    "crates/launchtrac-sim-proto",
    "crates/launchtrac-edge",
    "crates/launchtrac-companion",
    "crates/launchtrac-api",
    "crates/launchtrac-shot",
    "crates/launchtrac-auth",
    "crates/launchtrac-ota",
    "crates/launchtrac-relay",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-2.0"
repository = "https://github.com/r87-e/launchtrac-v2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging & telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Home directory
dirs = "6"

# Workspace crates
launchtrac-common = { path = "crates/launchtrac-common" }
launchtrac-hal = { path = "crates/launchtrac-hal" }
launchtrac-vision = { path = "crates/launchtrac-vision" }
launchtrac-sim-proto = { path = "crates/launchtrac-sim-proto" }
