[package]
name = "launchtrac-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LaunchTrac cloud service: launchtrac-api"

[dependencies]
launchtrac-common = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
