[package]
name = "launchtrac-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LaunchTrac auth service: device registration, JWT, OAuth"

[dependencies]
launchtrac-common = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
