[package]
name = "launchtrac-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, config, and error definitions for LaunchTrac"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
