[package]
name = "launchtrac-companion"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LaunchTrac cloud service: launchtrac-companion"

[dependencies]
launchtrac-common = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
