[package]
name = "launchtrac-edge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LaunchTrac edge binary — runs on Raspberry Pi 5, captures and analyzes golf shots"

[[bin]]
name = "launchtrac"
path = "src/main.rs"

[dependencies]
launchtrac-common = { workspace = true }
launchtrac-hal = { workspace = true }
launchtrac-vision = { workspace = true }
launchtrac-sim-proto = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clap = { version = "4", features = ["derive"] }
