[package]
name = "launchtrac-ota"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LaunchTrac cloud service: launchtrac-ota"

[dependencies]
launchtrac-common = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
