[package]
name = "launchtrac-sim-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Golf simulator protocol implementations — GSPro and E6/TruGolf"

[dependencies]
launchtrac-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
