[package]
name = "launchtrac-vision"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Computer vision pipeline — ball detection (YOLO/NCNN), spin estimation, Gabor filter"

[dependencies]
launchtrac-common = { workspace = true }
launchtrac-hal = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
